--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We Travel</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
-        <nav></nav>
+        <!-- NavMenu -->
+        <nav class="flex space-between align-center">
+
+            <div class="logo">
+                <h1 class="font-size-36">We <span class="text-primary">Travel</span></h1>
+            </div>
+            <div class="menu">
+                <a href="index.html" class="text-center text-primary">Home</a>
+                <a href="#" class="text-center">Packages</a>
+                <a href="#" class="text-center">Testimonial</a>
+                <a href="#" class="text-center">Blog</a>
+                <a style="margin-right: 0;" href="#" class="text-center">Contact</a>
+            </div>
+            <div class="humburger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
+        <!-- Banner Section -->
+        <div class="banner-section text-center border-rounded">
+            <h1 class="font-36">Explore Your Travel</h1>
+            <p>Do you want a trouble free world tour?Just join with us,and explore the world being our friend</p>
+            <div class="search-section flex"><input type="text"><input type="text"><input type="text"></div>
+        </div>
+
     </header>
     <main></main>
     <footer></footer>
-    
+
 </body>
+
 </html>
