pause banner section and juming to out popular tours section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,27 @@
             </div>
         </nav>
         <!-- Banner Section -->
-        <div class="banner-section text-center border-rounded">
-            <h1 class="font-36">Explore Your Travel</h1>
-            <p>Do you want a trouble free world tour?Just join with us,and explore the world being our friend</p>
-            <div class="search-section flex"><input type="text"><input type="text"><input type="text"></div>
+        <div class="banner-section text-center border-rounded ">
+            <h1 class="font-36 text-white">Explore Your Travel</h1>
+            <p class="text-white">Do you want a trouble free world tour?Just join with us,and explore the world being
+                our friend</p>
+            <div class="search-section flex"><input type="text" placeholder="Where go">
+                <select placeholder="When">
+                    <option>Volvo</option>
+                    <option>Saab</option>
+                    <option>Mercedes</option>
+                    <option>Audi</option>
+                </select>
+
+                <select>
+                    <option>Volvo</option>
+                    <option>Saab</option>
+                    <option selected>Mercedes</option>
+                    <option>Audi</option>
+                </select>
+                <button type="button" class="btn-primary"><i class="fa-solid fa-magnifying-glass"></i>
+                    Find Now</button>
+            </div>
         </div>
 
     </header>
