popular tours section completed

--- a/index.html
+++ b/index.html
@@ -55,7 +55,28 @@
         </div>
 
     </header>
-    <main></main>
+    <main>
+        <section class="popular-tours-section">
+            <div class="popular-content">
+                <h2 class="font-size-40">Our Popular tours</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium dolor aliquam maiores nobis
+                    error dolores facere ut suscipit deserunt repellendus.</p>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, quos!</li>
+                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, repudiandae!</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, exercitationem?</li>
+
+                </ul>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam deleniti fuga minima, distinctio
+                    iure autem minus obcaecati repellendus cupiditate in!</p>
+                <button type="button" class="btn-primary">Read More</button>
+
+            </div>
+            <div class="popular-img"><img src="Images/Rectangle 4.png" alt=""></div>
+        </section>
+
+
+    </main>
     <footer></footer>
 
 </body>
