why choose us card section formating complete

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     </header>
     <main>
+        <!-- Popular tours section -->
         <section class="popular-tours-section">
             <div class="popular-content">
                 <h2 class="font-size-40">Our Popular tours</h2>
@@ -74,7 +75,44 @@
             </div>
             <div class="popular-img"><img src="Images/Rectangle 4.png" alt=""></div>
         </section>
+        <!-- Choose your destination section -->
+        <div class="choose-destination-section text-center">
+            <h2 class="font-size-40">Choose Your Destination</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ea omnis a praesentium accusantium
+                provident aut ex illum. Adipisci, a.</p>
+            <div class="choose-section-img-container">
+            </div>
+        </div>
 
+        <!-- Why Choose Us Section -->
+        <div class="why-us-section text-center">
+            <h2 class="font-size-40">Why Choose Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ea omnis a praesentium accusantium
+                provident aut ex illum. Adipisci, a.</p>
+            <div class="our-speciality-section">
+                <div class="first-row flex space-around">
+                    <div class="card card-1">
+                        <img src="Images/" alt="">
+                        <h6 class="font-size-24"></h6>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id, quae.</p>
+                    </div>
+                    <div class="card card-2">
+                        <img src="" alt="">
+                        <h6 class="font-size-24"></h6>
+                        <p>Quasi ex quibusdam deleniti magnam adipisci sed numquam laboriosam minima!</p>
+                    </div>
+                </div>
+                <div class="second-row flex justify-content-center">
+                    <div class="card card-3">
+                        <img src="" alt="">
+                        <h6 class="font-size-24"></h6>
+                        <p>Ipsum sit est facere ratione ipsa. Eos cumque eum velit!</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
     </main>
     <footer></footer>
