footer section formating complete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <!-- NavMenu -->
         <nav class="flex space-between align-center">
 
-            <div class="logo">
+            <div class="logo flex justify-content-center align-center">
+                <img src="Images/Group 40071 (2).png" alt="">
                 <h1 class="font-size-36">We <span class="text-primary">Travel</span></h1>
             </div>
             <div class="menu">
@@ -92,20 +93,20 @@
             <div class="our-speciality-section">
                 <div class="first-row flex space-around">
                     <div class="card card-1">
-                        <img src="Images/" alt="">
-                        <h6 class="font-size-24"></h6>
+                        <img src="Images/hotel 1.png" alt="">
+                        <h6 class="font-size-24">Handpicked Hotels</h6>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id, quae.</p>
                     </div>
                     <div class="card card-2">
-                        <img src="" alt="">
-                        <h6 class="font-size-24"></h6>
+                        <img src="Images/map 1.png" alt="">
+                        <h6 class="font-size-24">World Class Service</h6>
                         <p>Quasi ex quibusdam deleniti magnam adipisci sed numquam laboriosam minima!</p>
                     </div>
                 </div>
                 <div class="second-row flex justify-content-center">
                     <div class="card card-3">
-                        <img src="" alt="">
-                        <h6 class="font-size-24"></h6>
+                        <img src="Images/price-tag 1.png" alt="">
+                        <h6 class="font-size-24">Best Price Guarantee</h6>
                         <p>Ipsum sit est facere ratione ipsa. Eos cumque eum velit!</p>
                     </div>
                 </div>
@@ -115,7 +116,30 @@
         </div>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-content">
+            <div class="logo text-center flex align-center justify-content-center">
+
+                <img src="Images/Group 40071 (2).png" alt="">
+                <h1 class="font-size-36">We <span class="text-primary">Travel</span></h1>
+            </div>
+            <p class="text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur explicabo iste vitae
+                est
+                perferendis
+                praesentium autem sequi velit nihil! Id assumenda sed quia esse, incidunt repudiandae error nesciunt
+                inventore. Minus.</p>
+            <div class="icons flex justify-content-center">
+                <i class="fa-brands fa-twitter "></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+
+            </div>
+            <hr>
+            <p class="text-center copyright">2017, All Rights Reserved by Rakibul.</p>
+        </div>
+
+    </footer>
 
 </body>
 
