--- a/index.html
+++ b/index.html
@@ -82,6 +82,34 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ea omnis a praesentium accusantium
                 provident aut ex illum. Adipisci, a.</p>
             <div class="choose-section-img-container">
+                <div class="destination-img-card-1">
+                    <img src="Images/Rectangle 5.png" alt="">
+                    <h6>Maldives</h6>
+                </div>
+                <div class="destination-img-card-2">
+                    <img src="Images/Rectangle 8.png" alt="">
+                    <h6>Indoneshia</h6>
+                </div>
+                <div class="destination-img-card-3">
+                    <img src="Images/Rectangle 6.png" alt="">
+                    <h6>Srilanka</h6>
+                </div>
+                <div class="destination-img-card-4">
+                    <img src="Images/Rectangle 7.png" alt="">
+                    <h6>North America</h6>
+                </div>
+                <div class="destination-img-card-5">
+                    <img src="Images/Rectangle 9.png" alt="">
+                    <h6>Kashmir</h6>
+                </div>
+                <div class="destination-img-card-6">
+                    <img src="Images/Rectangle 11.png" alt="">
+                    <h6>Bangladesh</h6>
+                </div>
+                <div class="destination-img-card-7">
+                    <img src="Images/Rectangle 10.png" alt="">
+                    <h6>Bandharban</h6>
+                </div>
             </div>
         </div>
 
