test to connect office pc

--- a/index.html
+++ b/index.html
@@ -1,174 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>We Travel</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-<body>
+  <body>
     <header>
-        <!-- NavMenu -->
-        <nav class="flex space-between align-center">
-
-            <div class="logo flex justify-content-center align-center">
-                <img src="Images/Group 40071 (2).png" alt="">
-                <h1 class="font-size-36">We <span class="text-primary">Travel</span></h1>
-            </div>
-            <div class="menu">
-                <a href="index.html" class="text-center text-primary">Home</a>
-                <a href="#" class="text-center">Packages</a>
-                <a href="#" class="text-center">Testimonial</a>
-                <a href="#" class="text-center">Blog</a>
-                <a style="margin-right: 0;" href="#" class="text-center">Contact</a>
-            </div>
-            <div class="humburger">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-        </nav>
-        <!-- Banner Section -->
-        <div class="banner-section text-center border-rounded ">
-            <h1 class="font-36 text-white">Explore Your Travel</h1>
-            <p class="text-white">Do you want a trouble free world tour?Just join with us,and explore the world being
-                our friend</p>
-            <div class="search-section flex"><input type="text" placeholder="Where go">
-                <select placeholder="When">
-                    <option>Volvo</option>
-                    <option>Saab</option>
-                    <option>Mercedes</option>
-                    <option>Audi</option>
-                </select>
-
-                <select>
-                    <option>Volvo</option>
-                    <option>Saab</option>
-                    <option selected>Mercedes</option>
-                    <option>Audi</option>
-                </select>
-                <button type="button" class="btn-primary"><i class="fa-solid fa-magnifying-glass"></i>
-                    Find Now</button>
-            </div>
+      <!-- NavMenu -->
+      <nav class="flex space-between align-center">
+        <div class="logo flex justify-content-center align-center">
+          <img src="Images/Group 40071 (2).png" alt="" />
+          <h1 class="font-size-36">
+            We <span class="text-primary">Travel</span>
+          </h1>
         </div>
+        <div class="menu">
+          <a href="index.html" class="text-center text-primary">Home</a>
+          <a href="#" class="text-center">Packages</a>
+          <a href="#" class="text-center">Testimonial</a>
+          <a href="#" class="text-center">Blog</a>
+          <a style="margin-right: 0" href="#" class="text-center">Contact</a>
+        </div>
+        <div class="humburger">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </nav>
+      <!-- Banner Section -->
+      <div class="banner-section text-center border-rounded">
+        <h1 class="font-36 text-white">Explore Your Travel</h1>
+        <p class="text-white">
+          Do you want a trouble free world tour?Just join with us,and explore
+          the world being our friend
+        </p>
+        <div class="search-section flex">
+          <input type="text" placeholder="Where go" />
+          <select placeholder="When">
+            <option>Volvo</option>
+            <option>Saab</option>
+            <option>Mercedes</option>
+            <option>Audi</option>
+          </select>
 
+          <select>
+            <option>Volvo</option>
+            <option>Saab</option>
+            <option selected>Mercedes</option>
+            <option>Audi</option>
+          </select>
+          <button type="button" class="btn-primary">
+            <i class="fa-solid fa-magnifying-glass"></i> Find Now
+          </button>
+        </div>
+      </div>
     </header>
     <main>
-        <!-- Popular tours section -->
-        <section class="popular-tours-section">
-            <div class="popular-content">
-                <h2 class="font-size-40">Our Popular tours</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium dolor aliquam maiores nobis
-                    error dolores facere ut suscipit deserunt repellendus.</p>
-                <ul>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, quos!</li>
-                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, repudiandae!</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, exercitationem?</li>
-
-                </ul>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam deleniti fuga minima, distinctio
-                    iure autem minus obcaecati repellendus cupiditate in!</p>
-                <button type="button" class="btn-primary">Read More</button>
-
-            </div>
-            <div class="popular-img"><img src="Images/Rectangle 4.png" alt=""></div>
-        </section>
-        <!-- Choose your destination section -->
-        <div class="choose-destination-section text-center">
-            <h2 class="font-size-40">Choose Your Destination</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ea omnis a praesentium accusantium
-                provident aut ex illum. Adipisci, a.</p>
-            <div class="choose-section-img-container">
-                <div class="destination-img-card-1">
-                    <img src="Images/Rectangle 5.png" alt="">
-                    <h6>Maldives</h6>
-                </div>
-                <div class="destination-img-card-2">
-                    <img src="Images/Rectangle 8.png" alt="">
-                    <h6>Indoneshia</h6>
-                </div>
-                <div class="destination-img-card-3">
-                    <img src="Images/Rectangle 6.png" alt="">
-                    <h6>Srilanka</h6>
-                </div>
-                <div class="destination-img-card-4">
-                    <img src="Images/Rectangle 7.png" alt="">
-                    <h6>North America</h6>
-                </div>
-                <div class="destination-img-card-5">
-                    <img src="Images/Rectangle 9.png" alt="">
-                    <h6>Kashmir</h6>
-                </div>
-                <div class="destination-img-card-6">
-                    <img src="Images/Rectangle 11.png" alt="">
-                    <h6>Bangladesh</h6>
-                </div>
-                <div class="destination-img-card-7">
-                    <img src="Images/Rectangle 10.png" alt="">
-                    <h6>Bandharban</h6>
-                </div>
-            </div>
+      <!-- Popular tours section -->
+      <section class="popular-tours-section">
+        <div class="popular-content">
+          <h2 class="font-size-40">Our Popular tours</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
+            dolor aliquam maiores nobis error dolores facere ut suscipit
+            deserunt repellendus.
+          </p>
+          <ul>
+            <li>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              quos!
+            </li>
+            <li>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
+              repudiandae!
+            </li>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Deserunt, exercitationem?
+            </li>
+          </ul>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam
+            deleniti fuga minima, distinctio iure autem minus obcaecati
+            repellendus cupiditate in!
+          </p>
+          <button type="button" class="btn-primary">Read More</button>
         </div>
-
-        <!-- Why Choose Us Section -->
-        <div class="why-us-section text-center">
-            <h2 class="font-size-40">Why Choose Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ea omnis a praesentium accusantium
-                provident aut ex illum. Adipisci, a.</p>
-            <div class="our-speciality-section">
-                <div class="first-row flex space-around">
-                    <div class="card card-1">
-                        <img src="Images/hotel 1.png" alt="">
-                        <h6 class="font-size-24">Handpicked Hotels</h6>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id, quae.</p>
-                    </div>
-                    <div class="card card-2">
-                        <img src="Images/map 1.png" alt="">
-                        <h6 class="font-size-24">World Class Service</h6>
-                        <p>Quasi ex quibusdam deleniti magnam adipisci sed numquam laboriosam minima!</p>
-                    </div>
-                </div>
-                <div class="second-row flex justify-content-center">
-                    <div class="card card-3">
-                        <img src="Images/price-tag 1.png" alt="">
-                        <h6 class="font-size-24">Best Price Guarantee</h6>
-                        <p>Ipsum sit est facere ratione ipsa. Eos cumque eum velit!</p>
-                    </div>
-                </div>
-
-            </div>
-
+        <div class="popular-img">
+          <img src="Images/Rectangle 4.png" alt="" />
         </div>
+      </section>
+      <!-- Choose your destination section -->
+      <div class="choose-destination-section text-center">
+        <h2 class="font-size-40">Choose Your Destination</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ea
+          omnis a praesentium accusantium provident aut ex illum. Adipisci, a.
+        </p>
+        <div class="choose-section-img-container">
+          <div class="destination-img-card-1">
+            <img src="Images/Rectangle 5.png" alt="" />
+            <h6>Maldives</h6>
+          </div>
+          <div class="destination-img-card-2">
+            <img src="Images/Rectangle 8.png" alt="" />
+            <h6>Indoneshia</h6>
+          </div>
+          <div class="destination-img-card-3">
+            <img src="Images/Rectangle 6.png" alt="" />
+            <h6>Srilanka</h6>
+          </div>
+          <div class="destination-img-card-4">
+            <img src="Images/Rectangle 7.png" alt="" />
+            <h6>North America</h6>
+          </div>
+          <div class="destination-img-card-5">
+            <img src="Images/Rectangle 9.png" alt="" />
+            <h6>Kashmir</h6>
+          </div>
+          <div class="destination-img-card-6">
+            <img src="Images/Rectangle 11.png" alt="" />
+            <h6>Bangladesh</h6>
+          </div>
+          <div class="destination-img-card-7">
+            <img src="Images/Rectangle 10.png" alt="" />
+            <h6>Bandharban</h6>
+          </div>
+        </div>
+      </div>
 
+      <!-- Why Choose Us Section -->
+      <div class="why-us-section text-center">
+        <h2 class="font-size-40">Why Choose Us</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ea
+          omnis a praesentium accusantium provident aut ex illum. Adipisci, a.
+        </p>
+        <div class="our-speciality-section">
+          <div class="first-row flex space-around">
+            <div class="card card-1">
+              <img src="Images/hotel 1.png" alt="" />
+              <h6 class="font-size-24">Handpicked Hotels</h6>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id,
+                quae.
+              </p>
+            </div>
+            <div class="card card-2">
+              <img src="Images/map 1.png" alt="" />
+              <h6 class="font-size-24">World Class Service</h6>
+              <p>
+                Quasi ex quibusdam deleniti magnam adipisci sed numquam
+                laboriosam minima!
+              </p>
+            </div>
+          </div>
+          <div class="second-row flex justify-content-center">
+            <div class="card card-3">
+              <img src="Images/price-tag 1.png" alt="" />
+              <h6 class="font-size-24">Best Price Guarantee</h6>
+              <p>Ipsum sit est facere ratione ipsa. Eos cumque eum velit!</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
-        <div class="footer-content">
-            <div class="logo text-center flex align-center justify-content-center">
-
-                <img src="Images/Group 40071 (2).png" alt="">
-                <h1 class="font-size-36">We <span class="text-primary">Travel</span></h1>
-            </div>
-            <p class="text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur explicabo iste vitae
-                est
-                perferendis
-                praesentium autem sequi velit nihil! Id assumenda sed quia esse, incidunt repudiandae error nesciunt
-                inventore. Minus.</p>
-            <div class="icons flex justify-content-center">
-                <i class="fa-brands fa-twitter "></i>
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-github"></i>
-
-            </div>
-            <hr>
-            <p class="text-center copyright">2017, All Rights Reserved by Rakibul.</p>
+      <div class="footer-content">
+        <div class="logo text-center flex align-center justify-content-center">
+          <img src="Images/Group 40071 (2).png" alt="" />
+          <h1 class="font-size-36">
+            We <span class="text-primary">Travel</span>
+          </h1>
         </div>
-
+        <p class="text-gray">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+          explicabo iste vitae est perferendis praesentium autem sequi velit
+          nihil! Id assumenda sed quia esse, incidunt repudiandae error nesciunt
+          inventore. Minus.
+        </p>
+        <div class="icons flex justify-content-center">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-github"></i>
+        </div>
+        <hr />
+        <p class="text-center copyright">
+          2017, All Rights Reserved by Rakibul .
+        </p>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
