newsletter section fifty percent complete

--- a/index.html
+++ b/index.html
@@ -172,7 +172,28 @@
           </div>
         </div>
       </div>
+      <!-- Newsletter Section -->
+      <div class="newsletter-section flex space-around">
+        <div class="newsletter-content">
+          <h6 class="font-size-24">Newsletter</h6>
+          <p class="line-height-26">
+            Get your daily dose of travel news & tips. Sign up today!
+          </p>
+          <input type="text" placeholder="Enter your name" /><input
+            type="text"
+            placeholder="Enter your email"
+          /><button type="button" class="btn-primary">Subscribe</button>
+        </div>
+        <div class="newsletter-img">
+          <img src="" alt="" />
+          <div class="save-up bg-primary">
+            <p class="font-24">Travel.com</p>
+            <h3 class="font-size-32">Save up to 70%</h3>
+          </div>
+        </div>
+      </div>
     </main>
+    <!-- Footer -->
     <footer>
       <div class="footer-content">
         <div class="logo text-center flex align-center justify-content-center">
