newsletter section formating complete

--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
           /><button type="button" class="btn-primary">Subscribe</button>
         </div>
         <div class="newsletter-img">
-          <img src="" alt="" />
+          <img src="Images/Rectangle 8 (1).png" alt="" />
           <div class="save-up bg-primary">
-            <p class="font-24">Travel.com</p>
+            <p class="font-size-24">Travel.com</p>
             <h3 class="font-size-32">Save up to 70%</h3>
           </div>
         </div>
