full structure completed without deals and extra section

--- a/index.html
+++ b/index.html
@@ -172,6 +172,58 @@
           </div>
         </div>
       </div>
+
+      <!-- Deals and discount section -->
+
+      <div class="deals-section-first-image text-center border-rounded">
+        
+        <div class="box-under-deals flex">
+
+        </div>
+      </div>
+
+    <main>
+
+
+
+
+
+
+
+
+
+
+
+      <!-- Simple perfect place -->
+      <section class="simple-perfect-section">
+        <div class="simple-perfect-content">
+          <h2 class="font-size-40">A Simple Perfect Place To Get Lost</h2>
+          <p>
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+          </p>
+          <ul>
+            <li>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              quos!
+            </li>
+            <li>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
+              repudiandae!
+            </li>
+          </ul>
+
+          <button type="button" class="btn-primary">Submit</button>
+        </div>
+        <div class="simple-perfect-img">
+          <img src="Images/Group 40089.png" alt="" />
+          <h6>
+            Watch Our Mountain in <br />
+            Bangladesh
+          </h6>
+        </div>
+      </section>
+
       <!-- Newsletter Section -->
       <div class="newsletter-section flex space-around">
         <div class="newsletter-content">
