--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>We Travel</title>
-  <link rel="stylesheet" href="style.css" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -205,7 +206,6 @@
       </div>
     </div>
 
-    <main>
 
 
 
@@ -214,85 +214,82 @@
 
 
 
+    <!-- Simple perfect place -->
+    <section class="simple-perfect-section">
+      <div class="simple-perfect-content">
+        <h2 class="font-size-40">A Simple Perfect Place To Get Lost</h2>
+        <p>
+          Amet consectetur. Vulputate commodo felis molestie risus ornare
+          nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+        </p>
+        <ul>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+            quos!
+          </li>
+          <li>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
+            repudiandae!
+          </li>
+        </ul>
 
+        <button type="button" class="btn-primary">Submit</button>
+      </div>
+      <div class="simple-perfect-img">
+        <img src="Images/Group 40089.png" alt="" />
+        <h6>
+          Watch Our Mountain in <br />
+          Bangladesh
+        </h6>
+      </div>
+    </section>
 
-
-      <!-- Simple perfect place -->
-      <section class="simple-perfect-section">
-        <div class="simple-perfect-content">
-          <h2 class="font-size-40">A Simple Perfect Place To Get Lost</h2>
-          <p>
-            Amet consectetur. Vulputate commodo felis molestie risus ornare
-            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-          </p>
-          <ul>
-            <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
-              quos!
-            </li>
-            <li>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
-              repudiandae!
-            </li>
-          </ul>
-
-          <button type="button" class="btn-primary">Submit</button>
-        </div>
-        <div class="simple-perfect-img">
-          <img src="Images/Group 40089.png" alt="" />
-          <h6>
-            Watch Our Mountain in <br />
-            Bangladesh
-          </h6>
-        </div>
-      </section>
-
-      <!-- Newsletter Section -->
-      <div class="newsletter-section flex space-around">
-        <div class="newsletter-content">
-          <h6 class="font-size-24">Newsletter</h6>
-          <p class="line-height-26">
-            Get your daily dose of travel news & tips. Sign up today!
-          </p>
-          <input type="text" placeholder="Enter your name" /><input type="text" placeholder="Enter your email" /><button
-            type="button" class="btn-primary">Subscribe</button>
-        </div>
-        <div class="newsletter-img">
-          <img src="Images/Rectangle 8 (1).png" alt="" />
-          <div class="save-up bg-primary">
-            <p class="font-size-24">Travel.com</p>
-            <h3 class="font-size-32">Save up to 70%</h3>
-          </div>
+    <!-- Newsletter Section -->
+    <div class="newsletter-section space-around">
+      <div class="newsletter-content">
+        <h6 class="font-size-24">Newsletter</h6>
+        <p class="line-height-26">
+          Get your daily dose of travel news & tips. Sign up today!
+        </p>
+        <input type="text" placeholder="Enter your name" /><input type="text" placeholder="Enter your email" /><button
+          type="button" class="btn-primary">Subscribe</button>
+      </div>
+      <div class="newsletter-img">
+        <img src="Images/Rectangle 8 (1).png" alt="" />
+        <div class="save-up bg-primary">
+          <p class="font-size-24">Travel.com</p>
+          <h3 class="font-size-32">Save up to 70%</h3>
         </div>
       </div>
-    </main>
-    <!-- Footer -->
-    <footer>
-      <div class="footer-content">
-        <div class="logo text-center flex align-center justify-content-center">
-          <img src="Images/Group 40071 (2).png" alt="" />
-          <h1 class="font-size-36">
-            We <span class="text-primary">Travel</span>
-          </h1>
-        </div>
-        <p class="text-gray">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-          explicabo iste vitae est perferendis praesentium autem sequi velit
-          nihil! Id assumenda sed quia esse, incidunt repudiandae error nesciunt
-          inventore. Minus.
-        </p>
-        <div class="icons flex justify-content-center">
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-github"></i>
-        </div>
-        <hr />
-        <p class="text-center copyright">
-          2017, All Rights Reserved by Rakibul .
-        </p>
+    </div>
+  </main>
+  <!-- Footer -->
+  <footer>
+    <div class="footer-content">
+      <div class="logo text-center flex align-center justify-content-center">
+        <img src="Images/Group 40071 (2).png" alt="" />
+        <h1 class="font-size-36">
+          We <span class="text-primary">Travel</span>
+        </h1>
       </div>
-    </footer>
+      <p class="text-gray">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+        explicabo iste vitae est perferendis praesentium autem sequi velit
+        nihil! Id assumenda sed quia esse, incidunt repudiandae error nesciunt
+        inventore. Minus.
+      </p>
+      <div class="icons flex justify-content-center">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+      </div>
+      <hr />
+      <p class="text-center copyright">
+        2017, All Rights Reserved by Rakibul .
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
