extra section added

--- a/index.html
+++ b/index.html
@@ -67,29 +67,6 @@
     </div>
   </header>
   <main>
-    <!-- Extra Section aka Life time membership section -->
-    <div class="lifetime-section">
-      <h1 class="text-center">Become Our Lifetime Member</h1>
-      <p class="text-gray">Buy a membership card and be our lifetime member .</p>
-      <div class="lifetime-card-container">
-        <div class="lifetime-card">
-          <h1>Gold Member</h1>
-          <p></p>
-          <p></p>
-        </div>
-        <div class="lifetime-card">
-          <h1>Silver Member</h1>
-          <p></p>
-          <p></p>
-        </div>
-        <div class="lifetime-card">
-          <h1>Iron Member</h1>
-          <p></p>
-          <p></p>
-        </div>
-      </div>
-    </div>
-
 
 
     <!-- Popular tours section -->
@@ -243,6 +220,48 @@
         </h6>
       </div>
     </section>
+
+    <!-- Extra Section aka Life time membership section -->
+    <div class="premium-section">
+      <h1 class="text-center font-size-36">Become Premium Member</h1>
+      <p class="text-gray text-center">Become a premium member and get lot of discounts .</p>
+      <div class="premium-card-container">
+        <div class="premium-card">
+          <h1>Gold Member</h1>
+          <h2>Benifit</h2>
+          <ul>
+            <li>100% cashback on first trip</li>
+            <li>Yearly one free internationl tour</li>
+            <li>10% cashback on every tour</li>
+          </ul>
+          <h2>Price : $999</h2>
+          <button type="button" class="btn-primary">Buy Now</button>
+        </div>
+        <div class="premium-card">
+          <h1>Silver Member</h1>
+          <h2>Benifit</h2>
+          <ul>
+            <li>100% cashback on first trip</li>
+            <li>Yearly one free domestic tour</li>
+            <li>5% cashback on every tour</li>
+          </ul>
+          <h2>Price : $599</h2>
+          <button type="button" class="btn-primary">Buy Now</button>
+        </div>
+        <div class="premium-card">
+          <h1>Genarel Member</h1>
+          <h2>Benifit</h2>
+          <ul>
+            <li>10% cashback on first trip</li>
+            <li>3% cashback on every tour</li>
+          </ul>
+          <h2>Price : $199</h2>
+          <button type="button" class="btn-primary">Buy Now</button>
+        </div>
+      </div>
+    </div>
+
+
 
     <!-- Newsletter Section -->
     <div class="newsletter-section space-around">
