final revision done

--- a/index.html
+++ b/index.html
@@ -174,20 +174,6 @@
       </div>
     </div>
 
-    <!-- Deals and discount section -->
-
-    <div class="deals-section-first-image text-center border-rounded">
-
-      <div class="box-under-deals flex">
-
-      </div>
-    </div>
-
-
-
-
-
-
 
 
 
@@ -196,17 +182,15 @@
       <div class="simple-perfect-content">
         <h2 class="font-size-40">A Simple Perfect Place To Get Lost</h2>
         <p>
-          Amet consectetur. Vulputate commodo felis molestie risus ornare
-          nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+          We want to get lost into nature?here have and exclusive offer :
         </p>
         <ul>
           <li>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
-            quos!
+            Exciting Day long marathan trip with buffet launch
+
           </li>
           <li>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
-            repudiandae!
+            BBQ party and Lottery section
           </li>
         </ul>
 
@@ -292,10 +276,9 @@
         </h1>
       </div>
       <p class="text-gray">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-        explicabo iste vitae est perferendis praesentium autem sequi velit
-        nihil! Id assumenda sed quia esse, incidunt repudiandae error nesciunt
-        inventore. Minus.
+        Explore the world with WeTravel - Your Passport to Unforgettable Journeys. Embark on a voyage of discovery,
+        where every destination is a new chapter in your travel story. Let WeTravel be your guide, turning dreams into
+        memories. Wanderlust fulfilled, one adventure at a time. Bon voyage!
       </p>
       <div class="icons flex justify-content-center">
         <i class="fa-brands fa-twitter"></i>
@@ -305,7 +288,7 @@
       </div>
       <hr />
       <p class="text-center copyright">
-        2017, All Rights Reserved by Rakibul .
+        &copy; 2024, All Rights Reserved by Rakibul .
       </p>
     </div>
   </footer>
