Deleted uneccessary breakpoints

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <img src="Images/Rectangle 8 (1).png" alt="" />
         <div class="save-up bg-primary">
           <p class="font-size-24">Travel.com</p>
-          <h3 class="font-size-32">Save up to 70%</h3>
+          <h3>Save up to 70%</h3>
         </div>
       </div>
     </div>
